canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-canary
  labels:
    app: hello
spec:
  replicas: CANARY_REPLICAS
  selector:
    matchLabels:
      app: hello
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: MaxSurge
      maxUnavailable: MaxUnavailable
  template:
    metadata:
      labels:
        app: hello
        tier: hello
    spec:
      containers:
      - name: hello
        image: siteshm/hello:canary
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: hello
        livenessProbe:
          httpGet:
            path: /health-check
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
