deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: MaxSurge
      maxUnavailable: MaxUnavailable
  template:
    metadata:
      labels:
        app: hello
        tier: hello
    spec:
      containers:
      - name: hello
        image: siteshm/hello:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: hello
        livenessProbe:
          httpGet:
            path: /health-check
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: hello
    tier: hello
  type: LoadBalancer
